SERVER-35651: Don't downgrade data files when a 4.2 binary running as an arbiter is shut down.

To downgrade binaries for an arbiter, the user must delete the dbpath.