src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.cpp
@@ -124,7 +124,10 @@ bool WiredTigerFileVersion::shouldDowngrade(bool readOnly,
     const auto replCoord = repl::ReplicationCoordinator::get(getGlobalServiceContext());
     const auto memberState = replCoord->getMemberState();
     if (memberState.arbiter()) {
-        return true;
+        // SERVER-35361: Arbiters will no longer downgrade their data files. To downgrade
+        // binaries, the user must delete the dbpath. It's not particularly expensive for a
+        // replica set to re-initialize an arbiter that comes online.
+        return false;
     }
 
     if (!serverGlobalParams.featureCompatibility.isVersionInitialized()) {
